2002-09-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	
	* pop3.test:
	* clnt.tcl:
	* srv.tcl: Added testsuite. Incomplete. No test of 'delete'
	  command yet. The problems found by the testsuite so far were all
	  in the used pop3 server (pop3d module of tcllib).

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.man: New file, doctools manpage.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.5.1

2001-12-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.tcl (retrieve): Forgot several 'RETR $index'
	  commands. Fixed now. This is tcllib bug item #490151 reported by
	  an unknown person.

2001-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.n:
	* pop3.tcl:
	* pkgIndex.tcl: Version up to 1.5

2001-08-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.tcl: Added UIDL command, patch [448634] by Mark G. Saye
	  <markgsaye@users.sourceforge.net>. Code was added manually as
	  the patch was not applicable anymore after the recent changes
	  (see below). Updated implementation of UIDL to use the new
	  command [RetrSlow] instead of performing the retrieval by
	  itself. Also updated the implementations of the TOP and LIST
	  commands to do the same.

2001-08-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.n: Updated to new package version, see [447013] too.

	* pop3.tcl: Lots of changes with regard to items [443613] and
	  [443645]. Switched auto back to binary (or else the counting of
	  octects is not right and we will hang trying to read more than
	  is coming from the server). This means we have to perform EOL
	  translation on the message on our own, this was effectively an
	  unreported bug. also unreported was that the faster code did not
	  do .-unstuffing, which the slower line-by-line code did. This is
	  now fixed too. My thanks to Ashwin Hirschi